crates/tmark-writers/tests/snapshots/web__web__container-admonition-after-list.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
- [x] Vrai

!!! note
    Corps.

Fin.
