crates/tmark-writers/tests/snapshots/web__web__container-admonition-attributes.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
<div class="admonition note" markdown="1">
<p class="admonition-title" markdown="span">Note</p>

Corps.

</div>
