crates/tmark-writers/tests/snapshots/web__web__diag-ref-unnumbered.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
This <span id="claim">claim</span> and [](){#top} are anchors.

::: div {#d1}
A block.
:::

<figure markdown="span" class="ts-subfigures">
![Left](l.svg){#fig:u}
<span class="ts-subcaption">(a)</span>
![Right](r.svg){#fig:v}
<span class="ts-subcaption">(b)</span>
</figure>

See [claim](#claim), [top](#top), [d1](#d1), [fig:u](#fig:u), [d1](#d1), second, and [the claim](#claim).
