crates/tmark-writers/tests/snapshots/web__web__escape-typst-enum-number.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
- [ ] 0\.
- [x] 1\.
- [ ] 3.5 kg

The exam is at 10. o'clock.

10\. Not a list: a sentence that opens on a number.
