crates/tmark-writers/tests/snapshots/web__web__fence-include-snippet.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
```python include="hanoi.py"
```
---diagnostics---
warning include-missing: included file `hanoi.py` not found; the fence is left as written
