crates/tmark-writers/tests/snapshots/web__web__link-anchor.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
## The claim {#sec:claim}

As [the claim](#sec:claim) shows, the watchdog fires twice.
